add feature patient
